# Capmeter8

./: Capmeter8.spec  README.md  pyproject.toml  test._sqa.npy  test.npy  test_ground.ipynb
source/: Capmeter8.py  ui_Cap8MainWindow.ui
src/C code/: CapEngine5.c  caplib.c  draft_CapEngine.c
src/Capmeter8/: Capmeter8.py  capmenu.py  test_ground.ipynb  ui_Cap8MainWindow.ui
src/Capmeter8/C code/: caplib.c
src/capmeter8.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
